@@ -146,4 +146,6 @@
 
 /.((?3)(?R)()(?2)|\1|$)()/
 
+/(?1)()((((((\1++))\x85)+)|))/
+
 # End of testinput8
